--- a/src/main/resources/es/cesur/progprojectpok/view/captura-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/captura-view.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -12,7 +19,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="509.0" prefWidth="922.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CapturaController">
+<AnchorPane prefHeight="509.0" prefWidth="922.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CapturaController">
    <children>
       <ImageView fitHeight="524.0" fitWidth="1013.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -30,12 +37,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
                            </color>
                         </Stop>
                      </stops>
@@ -59,12 +66,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
                            </color>
                         </Stop>
                      </stops>
@@ -88,12 +95,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
                            </color>
                         </Stop>
                      </stops>
@@ -110,26 +117,10 @@
             <Image url="@../images/blastoise-frente.gif" />
          </image>
       </ImageView>
-      <ImageView fx:id="imgEntrenador" fitHeight="183.0" fitWidth="219.0" layoutX="224.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgEntrenador" fitHeight="197.0" fitWidth="159.0" layoutX="226.0" layoutY="242.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/nurse-joy.png" />
+            <Image url="@../images/entren-espaldas2.png" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="menuMote" disable="true" layoutX="363.0" layoutY="185.0" opacity="0.93" prefHeight="210.0" prefWidth="363.0" style="-fx-background-color: #43CEB5; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-border-width: 3;">
-         <children>
-            <TextField fx:id="txtPreguntaMote" alignment="CENTER" editable="false" layoutX="20.0" layoutY="14.0" prefHeight="50.0" prefWidth="318.0" text="¿Quieres ponerle un mote?">
-               <font>
-                  <Font name="System Bold" size="22.0" />
-               </font>
-            </TextField>
-            <Button fx:id="btnSi" layoutX="58.0" layoutY="96.0" mnemonicParsing="false" onAction="#btnPonerMoteSi" prefHeight="44.0" prefWidth="82.0" text="SI" />
-            <Button fx:id="btnNo" layoutX="215.0" layoutY="96.0" mnemonicParsing="false" onAction="#btnPonerMoteNo" prefHeight="44.0" prefWidth="82.0" text="NO" />
-            <TextField fx:id="txtMote" disable="true" layoutX="54.0" layoutY="96.0" prefHeight="44.0" prefWidth="251.0" promptText="Felipe">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </TextField>
-         </children>
-      </AnchorPane>
    </children>
 </AnchorPane>
