--- a/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.EquipoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.EquipoController">
    <children>
       <ImageView fitHeight="558.0" fitWidth="968.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -79,36 +74,23 @@
             <InnerShadow />
          </effect>
       </Label>
-      <AnchorPane layoutX="89.0" layoutY="119.0" prefHeight="333.0" prefWidth="500.0" style="-fx-background-color: #43CEB5; -fx-border-color: #21C190; -fx-border-width: 8;">
+      <AnchorPane layoutX="90.0" layoutY="180.0" prefHeight="227.0" prefWidth="500.0" style="-fx-background-color: #43CEB5; -fx-border-color: #21C190; -fx-border-width: 8;">
          <children>
             <ImageView fx:id="imgFinal" fitHeight="119.0" fitWidth="119.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Gif-Pok.gif" />
                </image>
             </ImageView>
-            <ProgressBar fx:id="barVida" layoutX="183.0" layoutY="158.0" prefHeight="18.0" prefWidth="198.0" progress="1.0" />
+            <ProgressBar fx:id="barVida" layoutX="182.0" layoutY="105.0" prefHeight="18.0" prefWidth="198.0" progress="1.0" style=" -fx-accent: green"/>
             <Label fx:id="lblNomPok" layoutX="183.0" layoutY="30.0" prefHeight="33.0" prefWidth="148.0" text="CHARIZARD">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <ImageView fx:id="imgTipo1" fitHeight="33.0" fitWidth="33.0" layoutX="78.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/IconosTipos/icoFuego.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="imgtipo2" fitHeight="35.0" fitWidth="33.0" layoutX="113.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/IconosTipos/icoVolador.png" />
-               </image></ImageView>
-            <ImageView fx:id="imgGen" fitHeight="25.0" fitWidth="23.0" layoutX="187.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/imagen.png" />
-               </image>
-            </ImageView>
             <AnchorPane layoutX="156.0" layoutY="39.0" prefHeight="134.0" prefWidth="3.0" style="-fx-background-color: black; -fx-background-radius: 10;" />
-            <TextArea fx:id="txtDescrip" layoutX="65.0" layoutY="207.0" prefHeight="98.0" prefWidth="370.0" />
-            <Label fx:id="lblNivel" layoutX="36.0" layoutY="160.0" prefHeight="33.0" prefWidth="33.0" text="NIVEL" />
+            <Label fx:id="lblNivel" layoutX="182.0" layoutY="67.0" prefHeight="33.0" prefWidth="33.0" text="NIVEL" />
             <ImageView fx:id="imgObj" fitHeight="41.0" fitWidth="52.0" layoutX="184.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="lblTipo1" layoutX="26.0" layoutY="160.0" prefHeight="33.0" prefWidth="52.0" text="TIPO1" />
+            <Label fx:id="lblTipo2" layoutX="88.0" layoutY="160.0" prefHeight="33.0" prefWidth="52.0" text="TIPO2" />
          </children>
          <effect>
             <InnerShadow />
